
  CHANGELOG FOR ISTAT
 -------------------------------------------------------------------------
  * Version: 0.5.4
  * New: Implemented libfslabel. Support for reading disk labels.
  * New: Specify custom disk labels in config file.
  * Fix: CPU calculation gone bad. -0% idle not more an issue.
  * Fix: Some dubious C string manipulation.
  * Fix: Probe failed net ifaces every minute to see if they are up.
  * Fix: Create pid and cache directories automaticly.
 -------------------------------------------------------------------------
  * Version: 0.5.3
  * New: Solaris support. Yay!
  * New: Changed to automake building system.
  * New: monitor_disk can now take mount points.
  * Fix: Permissions problem with cache fixed.
  * Fix: Resolved issue with no memory stats running istatd on a VPS.
 -------------------------------------------------------------------------
  * Version: 0.5.2
  * New: Cache directory now configurable by cache_dir in config.
  * New: Created basic man page documentation.
  * New: Flag for clearing the cache. (--clear-sessions)
  * Fix: Should be more quiet on the stdout now.
  * Fix: Default path to configuration file will now be honoured.
  * Fix: Makefile should obey configured paths.
 -------------------------------------------------------------------------
  * Version: 0.5.1
  * Fix: Display help and version without read permission to config.
  * Fix: Forgot to rename properties for network and port that was changed.
 -------------------------------------------------------------------------
  * Version: 0.5.0
  * New: First release.