@@ -1,4 +1,4 @@
 noinst_LIBRARIES = libprobes.a
 
 libprobes_a_SOURCES = \
-	kstat.c swapctl.c procfs.c getloadavg.c statfs.c
+	kstat.c swapctl.c procfs.c getloadavg.c statfs.c kvm.c sysctl.c
