@@ -2,6 +2,7 @@
   CHANGELOG FOR ISTAT
  -------------------------------------------------------------------------
   * Version: 0.5.4
+  * New: FreeBSD support. Yay!
   * New: Implemented libfslabel. Support for reading disk labels.
   * New: Specify custom disk labels in config file.
   * Fix: CPU calculation gone bad. -0% idle not more an issue.
